maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:11: error: not found: value avancer
       avancer(); 
       ^